k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ChatBots
  labels:
    name: ChatBots
    app: konditorei-widget
